[package]
name = "vulkano-raytracing"
version = "0.1.1"
authors = ["Vlad Alex <vlad.al.dp@gmail.com>"]
build = "build.rs"

[[bin]]
name = "tracer"
path = "src/main.rs"

[dependencies]
vulkano = "=0.7.1"
vulkano-shader-derive = "0.7"
vulkano-win = "0.7"
vulkano_text = "0.5"
winit = "0.7.0"

time = "0.1"
image = "0.18"
tobj = "0.1"
cgmath = "0.16"
clap = "~2.27.0"
regex = "=0.2.7"
lazy_static = "~1.0.0"

cmake = "=0.1.32"
rayon = "=1.0.0"
rayon-core = "=1.4.0"
pest = "=2.0.0"
pest_derive = "=2.0.0"
gimli = "=0.16.0"
addr2line = "=0.7.0"
backtrace = "=0.3.13"
half = "=1.0.0"
rustc-demangle = "=0.1.10"
byteorder = "=1.3.0"
glsl-to-spirv = "=0.1.4"
stable_deref_trait = "=1.0.0"
either = "=1.5.0"
smallvec = "=0.6.10"
rusttype = "=0.2.3"
linked-hash-map = "=0.5.0"

[build-dependencies]
tera = "=0.11.20"
regex = "=1.0.0"
regex-syntax = "=0.6.0"
cc = "=1.0.8"
