[package]
name = "vulkano-raytracing"
version = "0.1.1"
authors = ["Vlad Alex <vlad.al.dp@gmail.com>"]
build = "build.rs"

[[bin]]
name = "tracer"
path = "src/main.rs"

[dependencies]
vulkano = "=0.7.1"
vulkano-shader-derive = "0.7"
vulkano-win = "0.7"
vulkano_text = "0.5"
winit = "0.7.0"

time = "0.1"
image = { version = "=0.18.0", default-features = false }
tobj = "0.1"
cgmath = "0.16"
clap = "~2.27.0"
regex = "=0.2.7"
lazy_static = "~1.0.0"

cmake = "=0.1.32"
rayon = "=1.0.0"
rayon-core = "=1.4.0"
pest = "=2.0.0"
pest_derive = "=2.0.0"
gimli = "=0.16.0"
addr2line = "=0.7.0"
backtrace = "=0.3.13"
half = "=1.0.0"
rustc-demangle = "=0.1.10"
byteorder = "=1.3.0"
glsl-to-spirv = "=0.1.4"
stable_deref_trait = "=1.0.0"
either = "=1.5.0"
smallvec = "=0.6.10"
rusttype = "=0.2.3"
linked-hash-map = "=0.5.0"
serde_json = "=1.0.34"
unicode-bidi = "=0.3.4"
unicode-normalization = "=0.1.7"
intervaltree = "=0.2.4"
serde = "=1.0.76"
flate2 = "=1.0.3"
aho-corasick = "=0.6.5"
chrono = "=0.4.1"
memchr = "=2.1.2"
stb_truetype = "=0.2.5"

[build-dependencies]
tera = "=0.11.20"
regex = "=1.0.0"
regex-syntax = "=0.6.0"
cc = "=1.0.8"
